--- a/index.html
+++ b/index.html
@@ -9,8 +9,24 @@
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
+    <div>
+        <button id="playGame">Play Game</button>
+    </div>
     <div id="gameBoardContainer">
         
     </div>
+    <dialog open>
+        <form action="" method="dialog">
+            <div>
+                <label for="playerOneName">Player 1: </label>
+                <input type="text" id="playerOneName">
+            </div>
+            <div>
+                <label for="playerTwoName">Player 2: </label>
+                <input type="text" id="playerTwoName">
+            </div>
+            <div><button type="submit" id="playButton">Play</button></div>
+        </form>
+    </dialog>
 </body>
 </html>
