Add stop playing functionality

--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
-    <div>
-        <button id="playGame">Play Game</button>
-    </div>
     <div id="gameBoardContainer">
         
     </div>
+
+    <div>
+        
+    </div>
+
     <dialog open>
         <form action="" method="dialog">
             <div>
                 <label for="playerOneName">Player 1: </label>
-                <input type="text" id="playerOneName">
+                <input type="text" id="playerOneName" name="playerOneName">
             </div>
             <div>
                 <label for="playerTwoName">Player 2: </label>
-                <input type="text" id="playerTwoName">
+                <input type="text" id="playerTwoName" name="playerTwoName">
             </div>
             <div><button type="submit" id="playButton">Play</button></div>
         </form>
