--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <body>
     <h1>Tic Tac Toe</h1>
     <div id="gameBoardContainer">
-        
     </div>
 
+    <div></div>
+
+
     <div>
-        
+        <button id="restartButton" class="hidden">Restart</button>
     </div>
 
     <dialog open>
