Add player scoreboards html

--- a/index.html
+++ b/index.html
@@ -8,11 +8,26 @@
     <script src="javascript.js" defer></script>
 </head>
 <body>
-    <h1>Tic Tac Toe</h1>
-    <div id="gameBoardContainer">
+    <h1>Tic Tac Toe!</h1>
+    
+    <div id="gameArea">
+        <div id="playerOneBoard" class="hidden">
+            <h3>Player One</h3>
+            <p>Playing as O</p>
+        </div>
+
+        <div id="gameBoardContainer">
+        </div>
+
+        <div id="playerTwoBoard" class="hidden">
+            <h3>Player Two</h3>
+            <p>Playing as X</p>
+        </div>
     </div>
 
-    <div></div>
+    <div id="gameScoreboard" class="hidden">
+
+    </div>
 
 
     <div>
