Display players names and score on side panels

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div id="playerOneBoard" class="hidden">
             <h3>Player One</h3>
             <p>Playing as O</p>
+            <p>Score: 0</p>
         </div>
 
         <div id="gameBoardContainer">
@@ -22,6 +23,7 @@
         <div id="playerTwoBoard" class="hidden">
             <h3>Player Two</h3>
             <p>Playing as X</p>
+            <p>Score: 0</p>
         </div>
     </div>
 
