--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <p>Playing as O</p>
             <p>Score: 0</p>
         </div>
+        <div id="popover" class="popover-hidden">
+            test
+        </div>
     </div>
 
     <div id="gameScoreboard" class="hidden">
