Add highlight to first player on initial run

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="gameBoardContainer">
         </div>
 
-        <div id="playerTwoBoard" class="hidden">
+        <div id="playerTwoBoard" class="hidden highlight">
             <h3>Player Two</h3>
             <p>Playing as O</p>
             <p>Score: 0</p>
